--- a/Sprint-3/Desafio/desafio_sprint-3.ipynb
+++ b/Sprint-3/Desafio/desafio_sprint-3.ipynb
@@ -23,31 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\usuario1\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.2.3)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\usuario1\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2.1.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\usuario1\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\usuario1\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\usuario1\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\usuario1\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas"
    ]
@@ -6464,7 +6442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vizualizando a tabela com os Apps 'Mature 17+'"
+    "### Visualizando a tabela com os Apps 'Mature 17+'"
    ]
   },
   {
@@ -10243,7 +10221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gráfico de dispersão dos preços"
+    "## Gráfico de dispersão dos preços em relação a média"
    ]
   },
   {
