--- a/Sprint-3/Desafio/desafio_sprint-3.ipynb
+++ b/Sprint-3/Desafio/desafio_sprint-3.ipynb
@@ -6555,7 +6555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TOP 10 apps por REVIEWS"
+    "## Top 10 apps por REVIEWS"
    ]
   },
   {
@@ -7942,7 +7942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vizualizando a tabela com o TOP 10 Reviews"
+    "### Vizualizando a tabela com o top 10 Reviews"
    ]
   },
   {
@@ -8058,7 +8058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TOP 30 apps por PRICE"
+    "## Top 30 apps por Price"
    ]
   },
   {
@@ -9829,7 +9829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualização do TOP 30 APPs mais caros"
+    "### Visualização do top 30 apps mais caros"
    ]
   },
   {
@@ -10065,7 +10065,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Média dos preços dos APPs da Googleplaystore"
+    "## Média dos preços dos apps da Googleplaystore"
    ]
   },
   {
@@ -10181,7 +10181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gráfico de linhas dos APPs por PRICE"
+    "## Gráfico de linhas dos apps por Price"
    ]
   },
   {
@@ -10221,7 +10221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gráfico de dispersão dos preços em relação a média"
+    "## Gráfico de dispersão dos preços em relação à média"
    ]
   },
   {
